<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playing"
    android:background="@drawable/back5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.quiz.rtoquiz.Playing">

    <ImageView
        android:id="@+id/question_flag"
        android:layout_width="300dp"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/todo"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="303dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/question_flag"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner"
        android:elevation="4dp"
        android:paddingTop="20dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:id="@+id/btnGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/txtQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:text="@string/_1_30"
                    android:textSize="32sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:max="5" />

            <Button
                android:id="@+id/btnAnswerA"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#ff8a80"
                android:text="@string/answer_a"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#ff8a80"
                android:text="@string/answer_b"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#ff8a80"
                android:text="@string/answer_c"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:theme="@style/MyButton" />

            <Button
                android:id="@+id/btnAnswerD"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="#ff8a80"
                android:text="@string/answer_d"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:theme="@style/MyButton" />


        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:text="@string/choose_the_correct_answer"
        android:textAlignment="center"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>