<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPage"
    tools:context="com.quiz.rtoquiz.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_corner"
        android:elevation="4dp"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/btnGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/score_0"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtTotalQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/correct_0_10"
                android:textSize="30sp" />

            <ProgressBar
                android:id="@+id/doneProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/btnTryAgain"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#AD1457"
                android:text="@string/try_again"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:theme="@style/MyButton" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>